deployment/kubernetes/aerie-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: aerie-dev
  name: aerie-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aerie-gateway
  template:
    metadata:
      labels:
        app: aerie-gateway
    spec:
      containers:
        - name: aerie-gateway
          image: ghcr.io/nasa-ammos/aerie-gateway:develop
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: /app/files
              name: aerie-file-store
      volumes:
        - name: aerie-file-store
          persistentVolumeClaim:
            claimName: aerie-file-store
