deployment/kubernetes/aerie-merlin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: aerie-dev
  name: aerie-merlin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aerie-merlin
  template:
    metadata:
      labels:
        app: aerie-merlin
    spec:
      containers:
        - name: aerie-merlin
          image: ghcr.io/nasa-ammos/aerie-merlin:develop
          ports:
            - containerPort: 27183
          volumeMounts:
            - mountPath: /usr/src/app/merlin_file_store
              name: aerie-file-store
      restartPolicy: Always
      volumes:
        - name: aerie-file-store
          persistentVolumeClaim:
            claimName: aerie-file-store
