deployment/kubernetes/aerie-scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: aerie-dev
  name: aerie-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aerie-scheduler
  template:
    metadata:
      labels:
        app: aerie-scheduler
    spec:
      containers:
        - name: aerie-scheduler
          image: ghcr.io/nasa-ammos/aerie-scheduler:develop
          ports:
            - containerPort: 27185
          volumeMounts:
            - mountPath: /usr/src/app/merlin_file_store
              name: aerie-file-store
      restartPolicy: Always
      volumes:
        - name: aerie-file-store
          persistentVolumeClaim:
            claimName: aerie-file-store
