deployment/kubernetes/aerie-scheduler-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: aerie-dev
  name: aerie-scheduler-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aerie-scheduler-worker
  template:
    metadata:
      labels:
        app: aerie-scheduler-worker
    spec:
      containers:
        - name: aerie-scheduler-worker
          image: ghcr.io/nasa-ammos/aerie-scheduler-worker:develop
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/app/merlin_file_store
              name: aerie-file-store
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: aerie-file-store
          persistentVolumeClaim:
            claimName: aerie-file-store
            readOnly: true
