deployment/kubernetes/aerie-sequencing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: aerie-dev
  name: aerie-sequencing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aerie-sequencing
  template:
    metadata:
      labels:
        app: aerie-sequencing
    spec:
      containers:
        - name: aerie-sequencing
          image: ghcr.io/nasa-ammos/aerie-sequencing:develop
          ports:
            - containerPort: 27184
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/app/sequencing_file_store
              name: aerie-file-store
      restartPolicy: Always
      volumes:
        - name: aerie-file-store
          persistentVolumeClaim:
            claimName: aerie-file-store
