deployment/kubernetes/aerie-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: aerie-dev
  name: aerie-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aerie-ui
  template:
    metadata:
      labels:
        app: aerie-ui
    spec:
      containers:
        - env:
            - name: ORIGIN
              value: http://127.0.0.1
            - name: PUBLIC_AUTH_TYPE
              value: none
            - name: PUBLIC_GATEWAY_CLIENT_URL
              value: http://localhost:9000
            - name: PUBLIC_GATEWAY_SERVER_URL
              value: http://aerie-gateway:9000
            - name: PUBLIC_HASURA_CLIENT_URL
              value: http://localhost:8080/v1/graphql
            - name: PUBLIC_HASURA_SERVER_URL
              value: http://hasura:8080/v1/graphql
            - name: PUBLIC_HASURA_WEB_SOCKET_URL
              value: ws://localhost:8080/v1/graphql
          image: ghcr.io/nasa-ammos/aerie-ui:develop
          name: aerie-ui
          ports:
            - containerPort: 80
