deployment/kubernetes/plandev-action-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: plandev-dev
  name: plandev-action
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plandev-action
  template:
    metadata:
      labels:
        app: plandev-action
    spec:
      containers:
        - name: plandev-action
          image: ghcr.io/nasa-ammos/plandev-action:develop
          ports:
            - containerPort: 27186
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/app/action_file_store
              name: plandev-file-store
      restartPolicy: Always
      volumes:
        - name: plandev-file-store
          persistentVolumeClaim:
            claimName: plandev-file-store
