deployment/kubernetes/plandev-scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: plandev-dev
  name: plandev-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plandev-scheduler
  template:
    metadata:
      labels:
        app: plandev-scheduler
    spec:
      containers:
        - name: plandev-scheduler
          image: ghcr.io/nasa-ammos/plandev-scheduler:develop
          ports:
            - containerPort: 27185
          volumeMounts:
            - mountPath: /usr/src/app/merlin_file_store
              name: plandev-file-store
      restartPolicy: Always
      volumes:
        - name: plandev-file-store
          persistentVolumeClaim:
            claimName: plandev-file-store
