deployment/kubernetes/plandev-workspace-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: plandev-dev
  name: plandev-workspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plandev-workspace
  template:
    metadata:
      name: plandev-workspace
      labels:
        app: plandev-workspace
    spec:
      containers:
        - name: plandev-workspace
          image: ghcr.io/nasa-ammos/plandev-workspace:develop
          ports:
            - containerPort: 28000
          volumeMounts:
            - mountPath: /usr/src/ws
              name: workspace_file_store
      restartPolicy: Always
      volumes:
        - name: workspace_file_store
          persistentVolumeClaim:
            claimName: workspace_file_store
