deployment/kubernetes/aerie-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: aerie-dev
  name: aerie-gateway
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
      nodePort: 30000
  type: NodePort
  selector:
    app: aerie-gateway
