deployment/kubernetes/aerie-merlin-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: aerie-dev
  name: aerie-merlin
spec:
  ports:
    - name: "27183"
      port: 27183
      targetPort: 27183
  selector:
    app: aerie-merlin
