deployment/kubernetes/aerie-merlin-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: aerie-dev
  name: aerie-merlin-worker
spec:
  ports:
    - name: "27187"
      port: 27187
      targetPort: 8080
  selector:
    app: aerie-merlin-worker
