deployment/kubernetes/aerie-scheduler-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: aerie-dev
  name: aerie-scheduler
spec:
  ports:
    - name: "27185"
      port: 27185
      targetPort: 27185
  selector:
    app: aerie-scheduler
