deployment/kubernetes/aerie-scheduler-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: aerie-dev
  name: aerie-scheduler-worker
spec:
  ports:
    - name: "27189"
      port: 27189
      targetPort: 8080
  selector:
    app: aerie-scheduler-worker
