deployment/kubernetes/aerie-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: aerie-dev
  name: aerie-ui
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: aerie-ui
