deployment/kubernetes/aerie-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aerie-ui-ingress
  namespace: aerie-dev
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: aerie-ui
            port:
              number: 80
        path: /
        pathType: Prefix
